fixed the non-aligned submit button

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -19,7 +19,7 @@ form {
 }
 
 .punch_times {
-  font-weight: 800;
+  font-weight: 400;
   padding-right: 15px;
 }
 
